--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<a href="https://www.virtualgifts.app/gift/1">Gift</a>
+<html>
+  <body>
+    <div style="display: flex; flex: 1; height: 100%; align-items: center; justify-content: center;">
+      <h1>
+        <a href="https://www.virtualgifts.app/gift/1">Gift</a>
+      </h1>
+    </div>
+  </body>
+</html>
